initial fix for game alignment

--- a/games/games_style.css
+++ b/games/games_style.css
@@ -244,6 +244,7 @@
 }
 body {
 	font-family: "Poppins", sans-serif;
+  position: relative;
 	padding: 8rem 5%;
 	display: flex;
 	flex-direction: column;
@@ -264,7 +265,6 @@ body {
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
 	gap: 1.5rem;
-    margin-left: 20%;
 }
 .hoverbox {
   text-align: justify;
